--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,17 +13,17 @@
         android:theme="@style/Theme.NoteApp"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="false">
         </activity>
         <activity
-            android:name=".view.activity.RegisterActivity"
+            android:name=".ui.activity.RegisterActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="false">
         </activity>
         <activity
-            android:name=".view.activity.LoginActivity"
+            android:name=".ui.activity.LoginActivity"
             android:windowSoftInputMode="adjustPan"
             android:exported="true">
             <intent-filter>
